added shared_preferences to the project so the glucose data is stored and shown in the example app, ble_scanner.dart
ble_scanner.dart now scans for a Dexcom device, reads the packet data from the API which stores the glucose data, and reads the converted glucose data from state_storage_service.dart

This should probably be simplified but currently we are adding functionality and will optimize it over time

--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   cupertino_icons: ^1.0.6
   flutter_blue_plus: ^1.31.16
   permission_handler: any
+  shared_preferences: 2.2.2
 
 dev_dependencies:
   integration_test:
