--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   plugin_platform_interface: ^2.0.2
   flutter_blue_plus: ^1.31.16
   permission_handler: any
+  shared_preferences: 2.2.2
 
 dev_dependencies:
   flutter_test:
