--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,8 @@ dependencies:
   flutter_blue_plus: ^1.31.16
   permission_handler: any
   shared_preferences: 2.2.2
+  intl: 0.19.0
+
 
 dev_dependencies:
   flutter_test:
