--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   flutter_blue_plus: ^1.31.16
   permission_handler: any
   shared_preferences: 2.2.2
+  intl: 0.19.0
 
 dev_dependencies:
   integration_test:
