Added README.md for implementing the DexcomReader plugin

--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   permission_handler: any
   shared_preferences: 2.2.2
   intl: 0.19.0
+  dcdg: 3.0.0
 
 dev_dependencies:
   integration_test:
